--- a/style.css
+++ b/style.css
@@ -3,16 +3,17 @@
 body {
   background-color: #F7F9FC;
   font-family: 'Open Sans', sans-serif;
-  color : color: rgba(0, 0, 0, 0.5);
+  color : rgba(0, 0, 0, 0.5);
   font-size: 20px;
-  line-height: 5vh;
+  line-height: 1.5em;
   text-align: center;
 }
 
 h1, h2, h3 {
   color: #575F7D;
   font-family: 'Open Sans', sans-serif;
-  line-height: 6vh;
+  line-height: 1.5em;
+  margin: 0;
 }
 
 .main a {
@@ -79,32 +80,29 @@ ul>li {
 
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
-  .card {
+  .container {
     width: 80%;
+    margin: 20px auto;
   }
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
-  .card {
+  .container {
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 20px auto;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
-  .card {
+  .container {
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 20px auto;
   }
 }
-
 @media (max-width: 400px) {
   /* For a screen < 400px, this CSS will be read */
-  .card {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  .container {
+    width: 80%;
+    margin: 20px auto;
   }
 }
